# nexkeylock

./: .gitattributes  .gitignore  Cargo.toml  FRONTEND_ROADMAP.md  README.md  ROADMAP.md  SECURITY.md  SECURITY_AUDIT.md  SYNC_PWA_ROADMAP.md  TESTING.md  clippy.toml  deny.toml  gestionnaire-mots-de-passe-conception.md  rust-toolchain.toml  rustfmt.toml
.github/workflows/: ci.yml
apps/nexkeylock-bureau/: .gitignore  E2E.md  README.md  eslint.config.js  index.html  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json  vite.config.ts
apps/nexkeylock-bureau/src/: App.tsx  index.css  main.tsx
apps/nexkeylock-bureau/src-tauri/: Cargo.toml  tauri.conf.json
apps/nexkeylock-bureau/src-tauri/capabilities/: default.json
apps/nexkeylock-bureau/src-tauri/icons/: icon.icns
apps/nexkeylock-bureau/src-tauri/src/: commandes.rs  erreur.rs  etat.rs  fuites.rs  lib.rs  main.rs  presse_papiers.rs  reglages.rs  synchro.rs
apps/nexkeylock-bureau/src/composants/: AnneauTotp.tsx  BarreLaterale.tsx  Bouton.test.tsx  Bouton.tsx  CadreAuth.tsx  CarteEntree.test.tsx  CarteEntree.tsx  ChampMotDePasse.tsx  FormulaireEntree.test.tsx  FormulaireEntree.tsx  GenerateurMotDePasse.test.tsx  GenerateurMotDePasse.tsx  IndicateurForce.test.tsx  IndicateurForce.tsx  JaugeScore.test.tsx  JaugeScore.tsx  ListeEntrees.tsx  Modale.tsx  PanneauDetail.tsx  SelecteurTheme.tsx  Toast.tsx
apps/nexkeylock-bureau/src/ecrans/: EcranAccueil.tsx  EcranCoffre.test.tsx  EcranCoffre.tsx  EcranGenerateur.tsx  EcranReglages.test.tsx  EcranReglages.tsx  EcranTableauBord.test.tsx  EcranTableauBord.tsx  EcranVerrouillage.test.tsx  EcranVerrouillage.tsx
apps/nexkeylock-bureau/src/lib/: boutique.ts  force.test.ts  force.ts  pont.ts  theme.ts  verrouillageAuto.test.ts  verrouillageAuto.ts
apps/nexkeylock-bureau/src/tests/: accessibilite.test.tsx  configuration.ts  securite.test.tsx
apps/nexkeylock-bureau/src/theme/: jetons.css
apps/nexkeylock-pwa/: .gitignore  README.md  eslint.config.js  index.html  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json  vite.config.ts
apps/nexkeylock-pwa/src/: App.a11y.test.tsx  App.test.tsx  App.tsx  index.css  main.tsx
apps/nexkeylock-pwa/src/lib/: coeur.ts  coeur.worker.ts  pont-wasm.ts  stockage.ts  synchro.test.ts  synchro.ts  verrouillageAuto.ts
apps/nexkeylock-pwa/src/tests/: configuration.ts
apps/nexkeylock-pwa/src/theme/: jetons.css
audit/: verification-crypto.md
crates/nex-coffre/: Cargo.toml
crates/nex-coffre/src/: audit.rs  coffre.rs  entete.rs  erreurs.rs  format.rs  generateur.rs  lib.rs  modele.rs  totp.rs
crates/nex-coffre/tests/: cycle_de_vie.rs  integration_partage.rs  proprietes_coffre.rs  recuperation.rs
crates/nex-console/: Cargo.toml
crates/nex-console/src/: avance.rs  durcissement.rs  main.rs  maj.rs  presse_papiers.rs  saisie.rs
crates/nex-console/tests/: e2e.rs  e2e_avance.rs
crates/nex-cryptographie/: Cargo.toml
crates/nex-cryptographie/benches/: calibration.rs
crates/nex-cryptographie/src/: aead.rs  alea.rs  erreurs.rs  hkdf_subcle.rs  kdf.rs  lib.rs  secret.rs
crates/nex-cryptographie/tests/: proprietes.rs
crates/nex-maj/: Cargo.toml
crates/nex-maj/src/: config.rs  github.rs  lib.rs  notification.rs
crates/nex-partage/: Cargo.toml
crates/nex-partage/src/: codec.rs  erreurs.rs  hybride.rs  lib.rs  partage.rs
crates/nex-passkey/: Cargo.toml
crates/nex-passkey/src/: lib.rs
crates/nex-serveur-sync/: Cargo.toml  README.md
crates/nex-serveur-sync/src/: lib.rs  main.rs
crates/nex-sync/: Cargo.toml
crates/nex-sync/src/: auth.rs  depot.rs  erreurs.rs  lib.rs
crates/nex-sync/tests/: integration_sync.rs
crates/nex-urgence/: Cargo.toml
crates/nex-urgence/src/: lib.rs
crates/nex-wasm/: Cargo.toml
crates/nex-wasm/src/: lib.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: aead_dechiffrer.rs  decoder_fichier.rs  ouvrir_fichier.rs
packaging/: AVANT-INSTALLATION.txt  LICENSE.txt  README.md  installateur.iss
scripts/: construire-wasm.ps1
