# Manifeste du workspace nexkeylock.
# Gestionnaire de mots de passe à architecture zéro-connaissance.
#
# Direction des dépendances (sens unique strict) :
#   nex-console  ->  nex-coffre  ->  nex-cryptographie
#
# Toutes les versions des dépendances externes sont épinglées ici, de façon
# centralisée, pour garantir l'agilité et faciliter `cargo audit`. Chaque crate
# ne tire une dépendance que lorsque le jalon correspondant l'exige.

[workspace]
resolver = "2"
members = [
    "crates/nex-cryptographie",
    "crates/nex-coffre",
    "crates/nex-console",
    "crates/nex-partage",
    "crates/nex-sync",
    "crates/nex-urgence",
    "crates/nex-passkey",
    "crates/nex-maj",
    "crates/nex-serveur-sync",
]
# Le dossier fuzz/ utilise la toolchain nightly + libFuzzer : isolé du workspace.
# L'app de bureau (Tauri v2) est isolée pour ne pas alourdir `cargo test
# --workspace` ni la CI cœur ; elle se construit via `cargo tauri build`.
exclude = ["fuzz", "apps/nexkeylock-bureau/src-tauri"]

[workspace.package]
version = "0.2.0"
edition = "2021"
rust-version = "1.83"
license = "MIT OR Apache-2.0"
authors = ["Équipe nexkeylock"]
repository = "local"

# --- Profil release optimisé pour la taille -------------------------------
# Objectif : binaire de distribution le plus léger possible SANS sacrifier la
# vitesse du KDF (opt-level conservé à 3) ni l'effacement des secrets.
# Note : on NE met PAS `panic = "abort"` — l'unwinding garantit l'exécution des
# Drop (ZeroizeOnDrop) sur le chemin de panique, important pour l'hygiène mémoire.
[profile.release]
opt-level = "z"       # optimiser pour la taille (Argon2 est borné mémoire : OK)
lto = true            # link-time optimization : élimine le code mort inter-crates
codegen-units = 1     # optimisation maximale (compilation un peu plus lente)
strip = true          # retire les symboles du binaire
panic = "unwind"      # explicite : conserver l'unwinding pour le zeroize-on-drop

# --- Lints communs à tout le workspace ------------------------------------
# Le code de bibliothèque n'a pas le droit d'utiliser unwrap()/expect() sur les
# chemins touchant aux secrets ou aux données non fiables. On le force ici, et
# on autorise unwrap/expect uniquement dans les tests via clippy.toml.
[workspace.lints.rust]
unsafe_code = "warn"

[workspace.lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
panic = "warn"

# --- Dépendances épinglées (centralisées) ---------------------------------
# Déclarées ici dès le Jalon 0 ; référencées par les crates au fil des jalons.
[workspace.dependencies]
# Cryptographie (Jalon 1)
argon2 = "0.5.3"
chacha20poly1305 = "0.10.1"
aes-gcm = "0.10.3"
hkdf = "0.12.4"
sha2 = "0.10.8"
sha1 = "0.10.6"
hmac = "0.12.1"
getrandom = "0.2.15"
rand = "0.8.5"
zeroize = { version = "1.8.1", features = ["derive"] }
subtle = "2.6.1"
region = "3.0.2"
# Durcissement du processus sous Unix (désactivation des core dumps).
libc = "0.2"
# Sérialisation et stockage (Jalon 2+)
serde = { version = "1.0.215", features = ["derive"] }
ciborium = "0.2.2"
# Note : le stockage SQLite/SQLCipher (rusqlite) est différé (MVP fichier
# unique). La dépendance sera (ré)introduite au jalon correspondant.
tempfile = "3.27.0"
# Gestion d'erreurs
thiserror = "1.0.69"
anyhow = "1.0.93"
# Interface en ligne de commande (Jalon 4)
clap = { version = "4.5.21", features = ["derive"] }
rpassword = "7.3.1"
# `default-features = false` retire le support image (crates image/png/moxcms…),
# inutile ici : on ne copie que du texte. Gain de taille important.
arboard = { version = "3.4.1", default-features = false }
# Mise à jour automatique (Jalon 7+) : HTTP minimal via TLS système (schannel sur
# Windows → pas de pile rustls/ring, binaire léger), parsing JSON et semver.
minreq = { version = "2.12", default-features = false, features = ["https-native"] }
serde_json = "1.0"
semver = "1.0"
# Serveur de synchro (Jalon S1) : serveur HTTP minimal, sans async.
tiny_http = "0.12"
# Phase avancée (Jalon 6) : courbes elliptiques + post-quantique
x25519-dalek = { version = "2.0.1", features = ["static_secrets", "zeroize"] }
ed25519-dalek = { version = "2.1.1", features = ["zeroize", "rand_core"] }
ml-kem = "0.2"
# Outils de test
proptest = "1.5.0"
assert_cmd = "2.0.16"
predicates = "3.1.2"
criterion = "0.5.1"
hex = "0.4.3"
hex-literal = "0.4.1"
libfuzzer-sys = "0.4.7"
