[package]
name = "nex-coffre"
description = "Logique du coffre nexkeylock : modèle de données, hiérarchie KEK/DEK, format versionné et authentifié, stockage."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true

[lints]
workspace = true

[dependencies]
nex-cryptographie = { path = "../nex-cryptographie" }
serde.workspace = true
ciborium.workspace = true
thiserror.workspace = true
zeroize.workspace = true

[dev-dependencies]
proptest.workspace = true
tempfile.workspace = true
hex.workspace = true
