[package]
name = "nex-console"
description = "Interface en ligne de commande de nexkeylock — le premier produit utilisable."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true

[[bin]]
name = "nexkeylock"
path = "src/main.rs"

[lints]
workspace = true

[features]
# Support du presse-papiers (désactivé par défaut pour ne pas dépendre des
# bibliothèques système X11/Wayland en CI). Activer avec --features presse-papiers.
presse-papiers = ["dep:arboard"]

[dependencies]
nex-coffre = { path = "../nex-coffre" }
clap.workspace = true
anyhow.workspace = true
zeroize.workspace = true
rpassword.workspace = true
ciborium.workspace = true
arboard = { workspace = true, optional = true }

[dev-dependencies]
assert_cmd.workspace = true
predicates.workspace = true
tempfile.workspace = true
