[package]
name = "nex-cryptographie"
description = "Primitives cryptographiques de nexkeylock : KDF (Argon2id), AEAD, HKDF, aléa, types secrets."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true

[lints]
workspace = true

[dependencies]
# Primitives auditées (projet RustCrypto). On n'écrit jamais de primitive à la main.
argon2.workspace = true
chacha20poly1305.workspace = true
aes-gcm.workspace = true
hkdf.workspace = true
sha2.workspace = true
getrandom.workspace = true
rand.workspace = true
zeroize.workspace = true
subtle.workspace = true
thiserror.workspace = true

[dev-dependencies]
hex.workspace = true
hex-literal.workspace = true
proptest.workspace = true
criterion.workspace = true

[[bench]]
name = "calibration"
harness = false
