[package]
name = "nex-cryptographie"
description = "Primitives cryptographiques de nexkeylock : KDF (Argon2id), AEAD, HKDF, aléa, types secrets."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true

[lints]
workspace = true

[dependencies]
# Primitives auditées (projet RustCrypto). On n'écrit jamais de primitive à la main.
argon2.workspace = true
chacha20poly1305.workspace = true
aes-gcm.workspace = true
hkdf.workspace = true
sha2.workspace = true
getrandom.workspace = true
rand.workspace = true
zeroize.workspace = true
subtle.workspace = true
thiserror.workspace = true

# Verrouillage des pages mémoire des secrets (VirtualLock/mlock), best-effort.
# Indisponible sur wasm32 (pas de mémoire protégée dans le navigateur) : sur
# cette cible, le verrouillage devient un no-op (effacement « au mieux »).
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
region.workspace = true

[dev-dependencies]
hex.workspace = true
hex-literal.workspace = true
proptest.workspace = true
criterion.workspace = true

[[bench]]
name = "calibration"
harness = false
