[package]
name = "nex-maj"
description = "Vérification et téléchargement des mises à jour de nexkeylock (API GitHub Releases) + notifications."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true

[lints]
workspace = true

[dependencies]
minreq.workspace = true
serde = { workspace = true }
serde_json.workspace = true
semver.workspace = true
thiserror.workspace = true
