[package]
name = "nex-serveur-sync"
description = "Serveur de synchronisation zéro-connaissance de nexkeylock (ne stocke que des blobs chiffrés)."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true

[lints]
workspace = true

[[bin]]
name = "nexkeylock-serveur-sync"
path = "src/main.rs"

[dependencies]
nex-sync = { path = "../nex-sync" }
nex-cryptographie = { path = "../nex-cryptographie" }
serde = { workspace = true }
serde_json.workspace = true
hex.workspace = true
tiny_http.workspace = true
