[package]
name = "nex-wasm"
description = "Pont WebAssembly du cœur nexkeylock pour la PWA (wasm-bindgen). Aucune crypto en JS."
version = "0.2.0"
edition = "2021"
rust-version = "1.83"
license = "MIT OR Apache-2.0"
authors = ["Équipe nexkeylock"]

[lib]
crate-type = ["cdylib", "rlib"]

[lints.clippy]
unwrap_used = "deny"
expect_used = "deny"

[dependencies]
wasm-bindgen = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
nex-coffre = { path = "../nex-coffre" }
# Sur wasm32, getrandom doit utiliser l'API Web Crypto du navigateur.
getrandom = { version = "0.2", features = ["js"] }

[dev-dependencies]
wasm-bindgen-test = "0.3"
