[package]
name = "nexkeylock-bureau"
description = "NexKeyLock — application de bureau (backend Tauri v2)."
version = "0.3.0"
edition = "2021"
rust-version = "1.83"
license = "MIT OR Apache-2.0"
authors = ["Équipe nexkeylock"]

# Bibliothèque réutilisable par les cibles bureau ET mobile (préparation Tauri v2
# mobile) : on expose les trois types de crate attendus.
[lib]
name = "nexkeylock_bureau_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

# Politique de sûreté : pas d'unwrap/expect dans le code de l'application.
[lints.clippy]
unwrap_used = "deny"
expect_used = "deny"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
zeroize = "1"
# Réutilise la vérification de mise à jour de la CLI (API GitHub, sans secret).
nex-maj = { path = "../../../crates/nex-maj" }
# Synchronisation zéro-connaissance (Jalon S2) : dérivation auth + client HTTP.
nex-sync = { path = "../../../crates/nex-sync" }
nex-cryptographie = { path = "../../../crates/nex-cryptographie" }
sha2 = "0.10"
hex = "0.4"
# Presse-papiers (copie à effacement automatique) — sans la pile image.
arboard = { version = "3.4", default-features = false }
# Client HTTP minimal (TLS système) pour la vérification de fuites HIBP (opt-in).
minreq = { version = "2.12", default-features = false, features = ["https-native"] }
# Le cœur cryptographique et le coffre : AUCUNE crypto n'est réimplémentée ici.
nex-coffre = { path = "../../../crates/nex-coffre" }

[dev-dependencies]
tempfile = "3"
nex-serveur-sync = { path = "../../../crates/nex-serveur-sync" }

[features]
# Activé par Tauri en production pour retirer les outils de développement.
custom-protocol = ["tauri/custom-protocol"]
